# ganesha

./: .gitignore  .gitmodules  .npmignore  .npmrc  CHANGELOG.md  Cargo.toml  README.md  dev.js  example.ts  ganesha-node  ganesha-node-shim  ganesha-run.cli.cjs  ganesha-run.js  ganesha-tap  index.js  loader.cjs  loader.mjs  package.json  parse.cjs  pnpm-lock.yaml  register.mjs  run.mjs  shell.nix  stub.mjs  test.cjs  test.js  tsconfig.build.json  tsconfig.json
.fixtures/: example.cjs.md  index.mjs
.nyc_output/: 4190ca5a-23b9-4703-b500-c7f01dddf1b3.json  701133a1-e0bd-4b19-b066-84510622c9a0.json  b61612d3-2b5b-4c0b-a960-8a4187896d28.json
.stubs/: README.md  stub.mjs
caching/: caching.mjs  package.json
core/: ganesha-core.cjs  package.json  parse.cjs  parse.d.ts  transform.cjs
doc/: GRIPES.md  LIVE.md  mahout.pu
esbuild/: README.md  loader.mjs  package.json  register.mjs
esbuild-wasm/: loader.mjs  package.json  register.mjs
examples/: example.mjs.md  example.ts.md  example2.ts.md  example3.ts.md  example_mjs.md
ezno/: Cargo.toml  README.md  package.json
language-client/: package.json
language-server/: package.json
loader/: ganesha  loader.cjs  loader.mjs  package.json  shared.cjs
node/: .npmignore  ganesha-node-constants.mjs  ganesha-node.mjs  ganesha-node.spec.mjs  ganesha-warn.cjs  package.json
node-legacy/: ganesha-node-cjs-patch.cjs  ganesha-node-cjs-warning.cjs  ganesha-node-cjs.cjs  package.json
nodejs-loader/: ganesha  loader.cjs  loader.mjs  package.json  patch.cjs  sourcemaps.cjs  trace.cjs  transform.cjs  util.mjs  warning.cjs
(+182 files in other folders)
