[package]
name = "ganesha_oxc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.67"
web-sys = { version = "0.3.67", default-features = false, features = ["console"] }
oxc_allocator = "0.5.0"
oxc_codegen = "0.5.0"
oxc_parser = "0.5.0"
oxc_semantic = "0.5.0"
oxc_span = "0.5.0"
oxc_transformer = "0.5.0"
wasm-bindgen = "0.2.87"
tsconfig = { git = "https://github.com/egasimus/tsconfig" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
