[package]
name = "ganesha_oxc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.67"
web-sys = { optional = true, version = "0.3.67", default-features = false, features = ["console"] }
wasm-bindgen = "0.2.87"

tsconfig = { git = "https://github.com/egasimus/tsconfig" }

oxc_allocator   = { path = "./oxc/crates/oxc_allocator" }
oxc_codegen     = { path = "./oxc/crates/oxc_codegen" }
oxc_parser      = { path = "./oxc/crates/oxc_parser" }
oxc_semantic    = { path = "./oxc/crates/oxc_semantic" }
oxc_span        = { path = "./oxc/crates/oxc_span" }
oxc_transformer = { path = "./oxc/crates/oxc_transformer" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
debug = [ "web-sys" ]
